overlays/dev/sprintstart-frontend/ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprintstart-frontend-default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: sprintstart-keycloak
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: sprintstart-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sprintstart-frontend
                port:
                  number: 80
  tls:
    - secretName: sprintstart-tls
